RTS-3454 Fix for unnecessary line break in article info
The last updated date gets a line break when viewed in firefox on windows 7.
A simple fix for this is to extend the columns it occupies in the grid.

--- a/themes/uib_zen/sass/layouts/responsive-sidebars.scss
+++ b/themes/uib_zen/sass/layouts/responsive-sidebars.scss
@@ -978,7 +978,7 @@ $zen-auto-include-item-base: false;
     }
     .uib-news-byline-last-updated,
     .uib-article-last-updated  {
-      @include zen-grid-item (1, 2);
+      @include zen-grid-item (2, 2);
     }
     .service-links {
       @include zen-grid-item (1, 4);
@@ -1737,7 +1737,7 @@ $zen-auto-include-item-base: false;
   }
   .uib-news-byline-last-updated,
   .uib-article-last-updated {
-    @include zen-grid-item (1, 2);
+    @include zen-grid-item (2, 2);
   }
   .service-links {
     @include zen-grid-item (1, 4);
